# microservices-rust

./: .gitignore
databases/dynamo/: Cargo.toml  table.json
databases/dynamo/src/: main.rs  prelude.rs
databases/mongo/: Cargo.toml
databases/mongo/src/: activity.rs  main.rs  prelude.rs
databases/redis/: Cargo.toml
databases/redis/src/: helpers.rs  main.rs  prelude.rs
databases/users_postgres/: Cargo.toml
databases/users_postgres/src/: main.rs  postgres_helpers.rs
exploring-futures/: Cargo.toml
exploring-futures/src/: main.rs
exploring-futures/src/channels/: executor.rs  mod.rs  mp_sc.rs  multiple.rs  one_shot.rs
grpc-ring/: Cargo.toml  build.rs  ring.proto
grpc-ring/src/: client.rs  lib.rs  server.rs
hyper-microservice/: Cargo.toml
hyper-microservice/src/: index.rs  main.rs  router.rs
hyper-microservice/src/router/: rest.rs  rest_regex.rs
images-service/: Cargo.toml
images-service/files/: E2BoUiwBq4lfABANiQ2n
images-service/src/: handler.rs  main.rs
microservice_serde/: Cargo.toml
microservice_serde/src/: color.rs  handler.rs  main.rs
random-service/: Cargo.toml  microservice.toml
random-service/src/: main.rs
