[package]
name = "grpc-ring"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
futures-cpupool = "0.1"
env_logger = "0.6"
failure = "0.1"
grpc = "0.6.1"
protobuf = "2.2"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "grpc-ring"
path = "src/server.rs"
test = false

[[bin]]
name = "grpc-ring-client"
path = "src/client.rs"
test = false