[package]
name = "hyper-microservice"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab="0.4.2"
hyper="0.12"
futures="0.1"
tokio = {version = "*", features = ["full"]}
lazy_static="1.0"
regex="1.0"