[package]
name = "images-service"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.1"
futures = "0.1"
tokio = "0.1"
hyper = "0.12"
hyper-staticfile = "0.3"
rand = "0.7.2"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"

