[package]
name = "microservice_serde"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure="0.1.6"
futures="0.1"
hyper="0.12"
rand="0.7.2"
serde="1.0.104"
serde_derive="1.0.104"
serde_json="1.0.44"
rand_distr="0.2.2"
base64="0.11.0"
base64-serde="0.4.0"