[package]
name = "random-service"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper="0.12"
rand="0.7.2"
log="0.4.8"
pretty_env_logger="0.3.1"
dotenv="0.15.0"
clap="2.33.0"
serde="1.0.104"
serde_derive="1.0.104"
toml="0.5.5"