[package]
name = "dynamo"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
failure = "0.1.7"
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
tokio = "0.2.13"
