[package]
name = "mongo"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.13"
chrono = "0.4.11"
clap = "2.33.0"
failure = "0.1.7"
mongodb = "0.3"
r2d2 = "0.8.8"
r2d2-mongodb = "0.2.2"
serde = "1.0.105"
serde_derive = "1.0.105"
url = "2.1.1"
