[package]
name = "redis"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.7"
r2d2 = "0.8.8"
r2d2_redis = "0.8.0"
redis = "0.9"
