[package]
name = "users_postgres"
version = "0.1.0"
authors = ["josephpenafiel <josephpenafiel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
postgres = "0.17.0"
postgres-types = "0.1.0"
# csv = "*"
# failure = "*"
# r2d2 = "*"
# rayon = "*"
# serde = "*"
# serde_derive = "*"